# modele_SIG

./: .gitignore  .readthedocs.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
153788/: FrogAbundance.csv
17714843/: Repro_Data.xlsx
data/: sources.csv
docs/: 1_introduction.md  6_discussion.md  8_liste_figures.md  api.md  api.rst  bibliographie.rst  conf.py  index.rst  liste_figures.rst  modules.rst  references.bib  visualisation.rst
docs/data/raw/12706085/: README.txt
docs/experiments/: index.rst
docs/methods/: index.md  index.rst
docs/source/: conf.py  index.rst
modele_sig.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: download_OSM.ipynb  merge_data.ipynb  modeling_damages.ipynb  tropical_storms.ipynb
scripts/: clean_data.py  download_ESAlandcover.py  download_INSEE.py  download_OSM.ipynb  download_data.py  download_elevation.py  download_figshare.py  hurricanes.py
src/utils/: data_clean.py  download_OSM.py  download_data.py  hurricanes.py  processing.py  visualisation.py
tests/: test_blank_raster.py  test_filter_track.py  test_harversine.py  test_mask_points.py  test_track_in_geometry.py  test_track_to_ds.py
