[project]
name = "modele-sig"
version = "0.1.0"
description = "Open-science tools for hurricane and geospatial processing"
authors = [{name = "Your Name"}]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts"]

[tool.setuptools.package-dir]
scripts = "scripts"
